--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -1,30 +1,44 @@
 /* .vitepress/theme/custom.css */
 :root {
+  --vp-c-neutral: var(--vp-c-black);
+  --vp-c-neutral-inverse: #9fbfff;
+
   --vp-c-brand-1: #ff0066;
   --vp-c-brand-2: #98003d;
   --vp-c-brand-3: #76002f;
 
-  --vp-c-bg: #fafafa; /*BBDCE5*/
-  --vp-c-bg-alt: #f6f6f7;
-  --vp-c-bg-elv: #ffffff;
-  --vp-c-bg-soft: #f6f6f7;
+  --vp-c-bg: #bbd1ff; /*BBDCE5*/
+  --vp-c-bg-alt: #b0caff;
+  --vp-c-bg-elv: #b0caff;
+  --vp-c-bg-soft: #b0caff;
   --vp-c-content-bg: #f4f5f6;
 
   --vp-c-text-1: #3c3c43;
   --vp-c-text-2: #67676c;
   --vp-c-text-3: #929295;
+
+  --vp-c-border: #7da7ff;
+  --vp-c-divider: #7da7ff;
+  --vp-c-gutter: #7da7ff;
 }
 
 :root.dark {
-  --vp-c-bg: #0f1115;
-  --vp-c-bg-alt: #050003;
+  --vp-c-neutral: var(--vp-c-white);
+  --vp-c-neutral-inverse: #213d78;
+
+  --vp-c-bg: #121e35;
+  --vp-c-bg-alt: #0f192a;
   --vp-c-bg-elv: #000;
-  --vp-c-bg-soft: #222;
+  --vp-c-bg-soft: #0f192a;
   --vp-c-content-bg: #1a1c23;
 
   --vp-c-text-1: #dfdfd6;
   --vp-c-text-2: #98989f;
   --vp-c-text-3: #6a6a71;
+
+  --vp-c-border: #202c42;
+  --vp-c-divider: #202c42;
+  --vp-c-gutter: #0c1629;
 }
 
 body {
